--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="file.svg" draggable="false" class="right" alt="File Icon">
                 </div>
                 <input type="file" id="fileInput">
-                <div class="title">Drop your Files here or, <span id="browseBtn">browse</span></div>
+                <div class="title">Drop your Files here or, <span id="browseBtn">Browse</span></div>
             </div>
         </form>
         <div class="progress-container">
