--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <img src="./copy-icon.svg" id="copyURLBtn" alt="copy to clipboard icon">
             </div>
 
-            <p class="email-info">Or Send via Email</p>
-            <div class="email-container">
+            <p class="email-info">Send the link</p>
+            <div hidden class="email-container">
                 <form id="emailForm">
                     <div class="filed">
                         <label for="fromEmail">Your email</label>
