--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <p class="email-info">Send the link</p>
-            <div hidden class="email-container">
+            <div  class="email-container" style="display: none;">
                 <form id="emailForm">
                     <div class="filed">
                         <label for="fromEmail">Your email</label>
